--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <a href="#main" class="skip-link">Skip to main content</a>
   <header>
-    <img src="logo.png" alt="Wunderlust Travel Logo">
+    <img src="logo-L.png" alt="Wunderlust Travel Logo">
     <h1>Let Wunderlust Travel help you plan the trip of your dreams!</h1>
     <nav>
       <ul>
@@ -28,20 +28,20 @@
     
     <figure>
       <picture>
-        <source srcset="majorca-waves-1024w.jpg" media="(min-width: 1024px)">
-        <source srcset="majorca-waves-780w.jpg" media="(min-width: 780px)">
-        <source srcset="majorca-waves-320w.jpg" media="(min-width: 320px)">
-        <img src="majorca-waves-320w.jpg" alt="Waves in Majorca">
+        <source srcset="majorca-waves-L.png" media="(min-width: 1024px)">
+        <source srcset="majorca-waves-M.png" media="(min-width: 780px)">
+        <source srcset="majorca-waves-S.png" media="(min-width: 320px)">
+        <img src="majorca-waves-S.png" alt="Waves in Majorca">
       </picture>
       <figcaption>Majorca Waves</figcaption>
     </figure>
 
     <figure>
-      <img src="majorca-beach.png" alt="Beach in Majorca">
+      <img src="majorca-beach-S.png" alt="Beach in Majorca">
       <figcaption>Majorca Beach</figcaption>
     </figure>
     <figure>
-      <img src="majorca-cove.png" alt="Cove in Majorca">
+      <img src="majorca-cove-S.png" alt="Cove in Majorca">
       <figcaption>Majorca Cove</figcaption>
     </figure>
 
@@ -81,25 +81,25 @@
     <h2>Testimonials</h2>
     <article>
       <h3>Miranda Blake</h3>
-      <img src="miranda-blake.png" alt="Miranda Blake">
+      <img src="miranda-blake-S.png" alt="Miranda Blake">
       <p><strong>Traveling From:</strong> London, England</p>
       <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
     </article>
     <article>
       <h3>Max Winter</h3>
-      <img src="max-winter.png" alt="Max Winter">
+      <img src="max-winter-S.png" alt="Max Winter">
       <p><strong>Traveling From:</strong> Berlin, Germany</p>
       <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer.”</blockquote>
     </article>
     <article>
       <h3>Inés Villegoes</h3>
-      <img src="ines-villegoes.png" alt="Inés Villegoes">
+      <img src="ines-villegoes-S.png" alt="Inés Villegoes">
       <p><strong>Traveling From:</strong> Barcelona, Spain</p>
       <blockquote>“A very safe environment for all travelers.”</blockquote>
     </article>
     <article>
       <h3>Carmen Lorenzo</h3>
-      <img src="carmen-lorenzo.png" alt="Carmen Lorenzo">
+      <img src="carmen-lorenzo-S.png" alt="Carmen Lorenzo">
       <p><strong>Traveling From:</strong> Madrid, Spain</p>
       <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
     </article>
