--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <a href="#main" class="skip-link">Skip to main content</a>
   <header>
-    <img src="logo-L.png" alt="Wunderlust Travel Logo">
+    <img src="images/logo-L.png" alt="Wunderlust Travel Logo">
     <h1>Let Wunderlust Travel help you plan the trip of your dreams!</h1>
     <nav>
       <ul>
@@ -25,81 +25,89 @@
   <main id="main">
     <h2>Majorca</h2>
     <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
-    
+
     <figure>
       <picture>
         <source srcset="majorca-waves-L.png" media="(min-width: 1024px)">
         <source srcset="majorca-waves-M.png" media="(min-width: 780px)">
         <source srcset="majorca-waves-S.png" media="(min-width: 320px)">
-        <img src="majorca-waves-S.png" alt="Waves in Majorca">
+        <img src="images/majorca-waves-S.png" alt="Waves in Majorca">
       </picture>
       <figcaption>Majorca Waves</figcaption>
     </figure>
 
     <figure>
-      <img src="majorca-beach-S.png" alt="Beach in Majorca">
+      <img src="images/majorca-beach-S.png" alt="Beach in Majorca">
       <figcaption>Majorca Beach</figcaption>
     </figure>
     <figure>
-      <img src="majorca-cove-S.png" alt="Cove in Majorca">
+      <img src="images/majorca-cove-S.png" alt="Cove in Majorca">
       <figcaption>Majorca Cove</figcaption>
     </figure>
 
     <h2>Plan Your Trip</h2>
+
     <article>
       <h3>How to Get There</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/></svg>
       <a href="#" title="Search for flights">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
       </a>
     </article>
 
     <article>
       <h3>Places to Stay</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" /><circle cx="7" cy="10" r="1" /></svg>
       <a href="#" title="Search for Hotels">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
       </a>
     </article>
 
     <article>
       <h3>Things to Do</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+        <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
+        <path d="M4 18l-1 -3h18l-1 3" />
+        <path d="M11 12h7l-7 -9v9" />
+        <line x1="8" y1="7" x2="6" y2="12" />
+      </svg>
       <a href="#" title="Search for Activities">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
       </a>
     </article>
 
     <article>
       <h3>Where to Eat</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+        <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
+      </svg>
       <a href="#" title="Search for Restaurants">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
       </a>
     </article>
 
     <h2>Testimonials</h2>
     <article>
       <h3>Miranda Blake</h3>
-      <img src="miranda-blake-S.png" alt="Miranda Blake">
+      <img src="images/miranda-blake-S.png" alt="Miranda Blake">
       <p><strong>Traveling From:</strong> London, England</p>
       <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
     </article>
     <article>
       <h3>Max Winter</h3>
-      <img src="max-winter-S.png" alt="Max Winter">
+      <img src="images/max-winter-S.png" alt="Max Winter">
       <p><strong>Traveling From:</strong> Berlin, Germany</p>
       <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer.”</blockquote>
     </article>
     <article>
       <h3>Inés Villegoes</h3>
-      <img src="ines-villegoes-S.png" alt="Inés Villegoes">
+      <img src="images/ines-villegoes-S.png" alt="Inés Villegoes">
       <p><strong>Traveling From:</strong> Barcelona, Spain</p>
       <blockquote>“A very safe environment for all travelers.”</blockquote>
     </article>
     <article>
       <h3>Carmen Lorenzo</h3>
-      <img src="carmen-lorenzo-S.png" alt="Carmen Lorenzo">
+      <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo">
       <p><strong>Traveling From:</strong> Madrid, Spain</p>
       <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
     </article>
@@ -108,22 +116,43 @@
     <dl>
       <dt>Size</dt>
       <dd>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <path d="M17 3l4 4l-14 14l-4 -4z" />
+          <path d="M16 7l-1.5 -1.5" />
+          <path d="M13 10l-1.5 -1.5" />
+          <path d="M10 13l-1.5 -1.5" />
+          <path d="M7 16l-1.5 -1.5" />
+        </svg>
         1,405 miles squared
       </dd>
+
       <dt>Elevation</dt>
       <dd>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <line x1="12" y1="21" x2="12" y2="3" />
+          <path d="M15 6l-3 -3l-3 3" />
+          <line x1="9" y1="21" x2="15" y2="21" />
+        </svg>
         4,741 feet
       </dd>
+
       <dt>Location</dt>
       <dd>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <circle cx="12" cy="11" r="3" />
+          <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+        </svg>
         Mediterranean
       </dd>
+
       <dt>Population</dt>
       <dd>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <circle cx="9" cy="7" r="4" />
+          <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+          <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+          <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+        </svg>
         923,608
       </dd>
     </dl>
