--- a/majorca.html
+++ b/majorca.html
@@ -4,7 +4,7 @@
   <!-- META TAGS FOR SEO AND ACCESSIBILITY -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="David Holst">
   <meta name="description" content="Plan your dream vacation with Wunderlust Travel. Explore Majorca’s beaches, culture, food, and top-rated accommodations.">
   <title>Wunderlust Travel - Explore Majorca</title>
   <meta name="keywords" content="Wunderlust Travel, Majorca, vacation, tourism, travel planning, Spain destinations">
