--- a/majorca.html
+++ b/majorca.html
@@ -78,7 +78,7 @@
         <h3>Testimonials</h3>
 
         <section>
-          <img src="images/mirando-blake.png" alt="Miranda Blake has a blonde bob and is wearing dark sunglasses">
+          <img src="images/miranda-blake.png" alt="Miranda Blake has a blonde bob and is wearing dark sunglasses">
           <h4>Amanda Blake</h4>
           <p>Traveling From: London, England</p>
           <blockquote><q>I traveled here for business, but my stay was extended. Now it is my home.</q></blockquote>
