--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <h1>Wunderlust</h1>
     <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
 
-    <nav>
+    <nav aria-label="Main Navigation">
       <div id="menu-toggle">
-        <h2 class="sr-only">Main Navigation</h2>
         <input type="checkbox" id="toggle" name="toggle">
         <label for="toggle">Menu</label>
         <ul>
