--- a/index.html
+++ b/index.html
@@ -54,46 +54,40 @@
       <img src="images/majorca-cove-S.png" alt="Cove in Majorca">
     </picture>
 
-    <h2>Plan Your Trip</h2>
-
-    <article>
-      <h3>How to Get There</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/></svg>
-      <a href="#" title="Search for flights">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
-
-    <article>
-      <h3>Places to Stay</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" /><circle cx="7" cy="10" r="1" /></svg>
-      <a href="#" title="Search for Hotels">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
-
-    <article>
-      <h3>Things to Do</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-        <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
-        <path d="M4 18l-1 -3h18l-1 3" />
-        <path d="M11 12h7l-7 -9v9" />
-        <line x1="8" y1="7" x2="6" y2="12" />
-      </svg>
-      <a href="#" title="Search for Activities">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
-
-    <article>
-      <h3>Where to Eat</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-        <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
-      </svg>
-      <a href="#" title="Search for Restaurants">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
+    <!-- Plan section converted to match the card layout -->
+    <section id="plan">
+      <h3>Plan Your Trip</h3>
+      <div>
+        <section>
+          <h4>How to Get There</h4>
+          <a href="#" title="Search for flights" aria-label="Search for flights">
+            <!-- airplane icon -->
+            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10.18 9H4.5L2 6H4.5L7 8.5H10.18L8.5 3H10.5L14 9H18.5A1.5 1.5 0 0 1 20 10.5A1.5 1.5 0 0 1 18.5 12H14L10.5 18H8.5L10.18 12H7L4.5 14.5H2L4.5 12H10.18Z"/></svg>
+          </a>
+        </section>
+        <section>
+          <h4>Places to Stay</h4>
+          <a href="#" title="Search for hotels" aria-label="Search for hotels">
+            <!-- bed icon -->
+            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 14H21V10A2 2 0 0 0 19 8H11V12H7V8H3V16H5V14H7Z"/><circle cx="7" cy="10" r="2"/></svg>
+          </a>
+        </section>
+        <section>
+          <h4>Things to Do</h4>
+          <a href="#" title="Search for activities" aria-label="Search for activities">
+            <!-- sailboat icon -->
+            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 21c1.5 0 1.5-1 3-1s1.5 1 3 1s1.5-1 3-1s1.5 1 3 1s1.5-1 3-1s1.5 1 3 1"/><path d="M4 18l-1-3h18l-1 3"/><path d="M11 12h7L11 3v9"/><path d="M8 7l-2 5"/></svg>
+          </a>
+        </section>
+        <section>
+          <h4>Where to Eat</h4>
+          <a href="#" title="Search for restaurants" aria-label="Search for restaurants">
+            <!-- fork/spoon icon -->
+            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 3v6a3 3 0 0 0 6 0V3"/><path d="M7 3v18"/><path d="M4 3v3a3 3 0 1 0 6 0V3"/><path d="M19 3v18"/><path d="M16 3v3a3 3 0 0 0 6 0V3"/></svg>
+          </a>
+        </section>
+      </div>
+    </section>
 
     <h2>Testimonials</h2>
     <article>
