--- a/index.html
+++ b/index.html
@@ -54,36 +54,35 @@
       <img src="images/majorca-cove-S.png" alt="Cove in Majorca">
     </picture>
 
-    <!-- Plan section converted to match the card layout -->
+    <!-- Plan section using brand SVG icons -->
     <section id="plan">
       <h3>Plan Your Trip</h3>
       <div>
         <section>
           <h4>How to Get There</h4>
           <a href="#" title="Search for flights" aria-label="Search for flights">
-            <!-- airplane icon -->
-            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10.18 9H4.5L2 6H4.5L7 8.5H10.18L8.5 3H10.5L14 9H18.5A1.5 1.5 0 0 1 20 10.5A1.5 1.5 0 0 1 18.5 12H14L10.5 18H8.5L10.18 12H7L4.5 14.5H2L4.5 12H10.18Z"/></svg>
+            <img src="images/get.svg" alt="airplane icon">
           </a>
         </section>
+
         <section>
           <h4>Places to Stay</h4>
           <a href="#" title="Search for hotels" aria-label="Search for hotels">
-            <!-- bed icon -->
-            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 14H21V10A2 2 0 0 0 19 8H11V12H7V8H3V16H5V14H7Z"/><circle cx="7" cy="10" r="2"/></svg>
+            <img src="images/stay.svg" alt="bed icon">
           </a>
         </section>
+
         <section>
           <h4>Things to Do</h4>
           <a href="#" title="Search for activities" aria-label="Search for activities">
-            <!-- sailboat icon -->
-            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 21c1.5 0 1.5-1 3-1s1.5 1 3 1s1.5-1 3-1s1.5 1 3 1s1.5-1 3-1s1.5 1 3 1"/><path d="M4 18l-1-3h18l-1 3"/><path d="M11 12h7L11 3v9"/><path d="M8 7l-2 5"/></svg>
+            <img src="images/do.svg" alt="sailboat icon">
           </a>
         </section>
+
         <section>
           <h4>Where to Eat</h4>
           <a href="#" title="Search for restaurants" aria-label="Search for restaurants">
-            <!-- fork/spoon icon -->
-            <svg class="plan-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 3v6a3 3 0 0 0 6 0V3"/><path d="M7 3v18"/><path d="M4 3v3a3 3 0 1 0 6 0V3"/><path d="M19 3v18"/><path d="M16 3v3a3 3 0 0 0 6 0V3"/></svg>
+            <img src="images/eat.svg" alt="fork and spoon icon">
           </a>
         </section>
       </div>
