--- a/index.html
+++ b/index.html
@@ -9,23 +9,16 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Skip to main content</a>
-
   <header>
-    <a href="index.html" id="logo"><img src="images/logo-L.png" alt="Wunderlust Travel Logo"></a>
-    <h1>Wunderlust</h1>
-    <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
-
-    <nav aria-label="Main Navigation">
-      <div id="menu-toggle">
-        <input type="checkbox" id="toggle" name="toggle">
-        <label for="toggle">Menu</label>
-        <ul>
-          <li><a href="#">Destinations</a></li>
-          <li><a href="#">Inspirations</a></li>
-          <li><a href="#">Special</a></li>
-          <li><a href="#contact">Contact Us</a></li>
-        </ul>
-      </div>
+    <img src="images/logo-L.png" alt="Wunderlust Travel Logo" id="logo">
+    <h1>Let Wunderlust Travel help you plan the trip of your dreams!</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Destinations</a></li>
+        <li><a href="#">Inspirations</a></li>
+        <li><a href="#">Special</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -34,59 +27,66 @@
     <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
 
     <picture>
-      <source srcset="images/majorca-waves-L.png" media="(min-width: 1024px)">
-      <source srcset="images/majorca-waves-M.png" media="(min-width: 780px)">
-      <source srcset="images/majorca-waves-S.png" media="(min-width: 320px)">
+      <source srcset="majorca-waves-L.png" media="(min-width: 1024px)">
+      <source srcset="majorca-waves-M.png" media="(min-width: 780px)">
+      <source srcset="majorca-waves-S.png" media="(min-width: 320px)">
       <img src="images/majorca-waves-S.png" alt="Waves in Majorca">
     </picture>
 
     <picture>
-      <source srcset="images/majorca-beach-L.png" media="(min-width: 1024px)">
-      <source srcset="images/majorca-beach-M.png" media="(min-width: 780px)">
-      <source srcset="images/majorca-beach-S.png" media="(min-width: 320px)">
+      <source srcset="majorca-beach-L.png" media="(min-width: 1024px)">
+      <source srcset="majorca-beach-M.png" media="(min-width: 780px)">
+      <source srcset="majorca-beach-S.png" media="(min-width: 320px)">
       <img src="images/majorca-beach-S.png" alt="Beach in Majorca">
     </picture>
 
     <picture>
-      <source srcset="images/majorca-cove-L.png" media="(min-width: 1024px)">
-      <source srcset="images/majorca-cove-M.png" media="(min-width: 780px)">
-      <source srcset="images/majorca-cove-S.png" media="(min-width: 320px)">
+      <source srcset="majorca-cove-L.png" media="(min-width: 1024px)">
+      <source srcset="majorca-cove-M.png" media="(min-width: 780px)">
+      <source srcset="majorca-cove-S.png" media="(min-width: 320px)">
       <img src="images/majorca-cove-S.png" alt="Cove in Majorca">
     </picture>
 
-    <!-- Plan section using brand SVG icons -->
-    <section id="plan">
-      <h3>Plan Your Trip</h3>
-      <div>
-        <section>
-          <h4>How to Get There</h4>
-          <a href="#" title="Search for flights" aria-label="Search for flights">
-            <img src="images/get.svg" alt="airplane icon">
-          </a>
-        </section>
+    <h2>Plan Your Trip</h2>
 
-        <section>
-          <h4>Places to Stay</h4>
-          <a href="#" title="Search for hotels" aria-label="Search for hotels">
-            <img src="images/stay.svg" alt="bed icon">
-          </a>
-        </section>
+    <article>
+      <h3>How to Get There</h3>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/></svg>
+      <a href="#" title="Search for flights">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+      </a>
+    </article>
 
-        <section>
-          <h4>Things to Do</h4>
-          <a href="#" title="Search for activities" aria-label="Search for activities">
-            <img src="images/do.svg" alt="sailboat icon">
-          </a>
-        </section>
+    <article>
+      <h3>Places to Stay</h3>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" /><circle cx="7" cy="10" r="1" /></svg>
+      <a href="#" title="Search for Hotels">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+      </a>
+    </article>
 
-        <section>
-          <h4>Where to Eat</h4>
-          <a href="#" title="Search for restaurants" aria-label="Search for restaurants">
-            <img src="images/eat.svg" alt="fork and spoon icon">
-          </a>
-        </section>
-      </div>
-    </section>
+    <article>
+      <h3>Things to Do</h3>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+        <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
+        <path d="M4 18l-1 -3h18l-1 3" />
+        <path d="M11 12h7l-7 -9v9" />
+        <line x1="8" y1="7" x2="6" y2="12" />
+      </svg>
+      <a href="#" title="Search for Activities">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+      </a>
+    </article>
+
+    <article>
+      <h3>Where to Eat</h3>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+        <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
+      </svg>
+      <a href="#" title="Search for Restaurants">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+      </a>
+    </article>
 
     <h2>Testimonials</h2>
     <article>
@@ -114,13 +114,33 @@
       <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
     </article>
 
-    <h2>About Your Destination</h2>
-    <dl>
-      <dt>Size</dt><dd>1,405 miles squared</dd>
-      <dt>Elevation</dt><dd>4,741 feet</dd>
-      <dt>Location</dt><dd>Mediterranean</dd>
-      <dt>Population</dt><dd>923,608</dd>
-    </dl>
+    <!-- ▼▼ REPLACED: <dl> … </dl> with #about block -->
+    <section id="about">
+      <h2>About Your Destination</h2>
+      <div>
+        <section>
+          <img src="images/size.svg" alt="ruler icon">
+          <h4>Size</h4>
+          <p>1,405 miles squared</p>
+        </section>
+        <section>
+          <img src="images/elevation.svg" alt="mountain icon">
+          <h4>Elevation</h4>
+          <p>4,741 feet</p>
+        </section>
+        <section>
+          <img src="images/location.svg" alt="location pin icon">
+          <h4>Location</h4>
+          <p>Mediterranean</p>
+        </section>
+        <section>
+          <img src="images/population.svg" alt="people icon">
+          <h4>Population</h4>
+          <p>923,608</p>
+        </section>
+      </div>
+    </section>
+    <!-- ▲▲ end About -->
 
     <h2 id="contact">Contact Us</h2>
     <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
