--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="David Holst" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="David Holst">
   <title>Wunderlust Travel</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <a href="#main" class="skip-link">Skip to main content</a>
-
   <header>
-    <img src="images/logo-L.png" alt="Wunderlust Travel Logo" id="logo" />
+    <img src="images/logo-L.png" alt="Wunderlust Travel Logo" id="logo">
     <h1>Let Wunderlust Travel help you plan the trip of your dreams!</h1>
     <nav>
       <ul>
@@ -25,41 +24,34 @@
 
   <main id="main">
     <h2>Majorca</h2>
-    <p>
-      Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage,
-      rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma,
-      are overflowing with character, while its beaches are famous all around the world, making it one of the
-      most sought-after summer destinations.
-    </p>
+    <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
 
     <picture>
-      <source srcset="majorca-waves-L.png" media="(min-width: 1024px)" />
-      <source srcset="majorca-waves-M.png" media="(min-width: 780px)" />
-      <source srcset="majorca-waves-S.png" media="(min-width: 320px)" />
-      <img src="images/majorca-waves-S.png" alt="Waves in Majorca" />
+      <source srcset="majorca-waves-L.png" media="(min-width: 1024px)">
+      <source srcset="majorca-waves-M.png" media="(min-width: 780px)">
+      <source srcset="majorca-waves-S.png" media="(min-width: 320px)">
+      <img src="images/majorca-waves-S.png" alt="Waves in Majorca">
     </picture>
 
     <picture>
-      <source srcset="majorca-beach-L.png" media="(min-width: 1024px)" />
-      <source srcset="majorca-beach-M.png" media="(min-width: 780px)" />
-      <source srcset="majorca-beach-S.png" media="(min-width: 320px)" />
-      <img src="images/majorca-beach-S.png" alt="Beach in Majorca" />
+      <source srcset="majorca-beach-L.png" media="(min-width: 1024px)">
+      <source srcset="majorca-beach-M.png" media="(min-width: 780px)">
+      <source srcset="majorca-beach-S.png" media="(min-width: 320px)">
+      <img src="images/majorca-beach-S.png" alt="Beach in Majorca">
     </picture>
 
     <picture>
-      <source srcset="majorca-cove-L.png" media="(min-width: 1024px)" />
-      <source srcset="majorca-cove-M.png" media="(min-width: 780px)" />
-      <source srcset="majorca-cove-S.png" media="(min-width: 320px)" />
-      <img src="images/majorca-cove-S.png" alt="Cove in Majorca" />
+      <source srcset="majorca-cove-L.png" media="(min-width: 1024px)">
+      <source srcset="majorca-cove-M.png" media="(min-width: 780px)">
+      <source srcset="majorca-cove-S.png" media="(min-width: 320px)">
+      <img src="images/majorca-cove-S.png" alt="Cove in Majorca">
     </picture>
 
     <h2>Plan Your Trip</h2>
 
     <article>
       <h3>How to Get There</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-        <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/></svg>
       <a href="#" title="Search for flights">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
       </a>
@@ -67,10 +59,7 @@
 
     <article>
       <h3>Places to Stay</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-        <path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6"/>
-        <circle cx="7" cy="10" r="1"/>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" /><circle cx="7" cy="10" r="1" /></svg>
       <a href="#" title="Search for Hotels">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
       </a>
@@ -102,66 +91,66 @@
     <h2>Testimonials</h2>
     <article>
       <h3>Miranda Blake</h3>
-      <img src="images/miranda-blake-S.png" alt="Miranda Blake" />
+      <img src="images/miranda-blake-S.png" alt="Miranda Blake">
       <p><strong>Traveling From:</strong> London, England</p>
       <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
     </article>
     <article>
       <h3>Max Winter</h3>
-      <img src="images/max-winter-S.png" alt="Max Winter" />
+      <img src="images/max-winter-S.png" alt="Max Winter">
       <p><strong>Traveling From:</strong> Berlin, Germany</p>
       <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer.”</blockquote>
     </article>
     <article>
       <h3>Inés Villegoes</h3>
-      <img src="images/ines-villegoes-S.png" alt="Inés Villegoes" />
+      <img src="images/ines-villegoes-S.png" alt="Inés Villegoes">
       <p><strong>Traveling From:</strong> Barcelona, Spain</p>
       <blockquote>“A very safe environment for all travelers.”</blockquote>
     </article>
     <article>
       <h3>Carmen Lorenzo</h3>
-      <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo" />
+      <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo">
       <p><strong>Traveling From:</strong> Madrid, Spain</p>
       <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
     </article>
 
-    <!-- ABOUT: keep your existing DL, just wrap it so styles are safely scoped -->
-    <section id="about-dl">
+    <!-- ▼▼ REPLACED: <dl> … </dl> with #about block -->
+    <section id="about">
       <h2>About Your Destination</h2>
-      <dl class="about-dl">
-        <dt>Size</dt>
-        <dd>
-          <!-- your icon (svg) if present -->
-          <!-- Optional inline SVG can go here -->
-          1,405 miles squared
-        </dd>
-
-        <dt>Elevation</dt>
-        <dd>
-          4,741 feet
-        </dd>
-
-        <dt>Location</dt>
-        <dd>
-          Mediterranean
-        </dd>
-
-        <dt>Population</dt>
-        <dd>
-          923,608
-        </dd>
-      </dl>
+      <div>
+        <section>
+          <img src="images/size.svg" alt="ruler icon">
+          <h4>Size</h4>
+          <p>1,405 miles squared</p>
+        </section>
+        <section>
+          <img src="images/elevation.svg" alt="mountain icon">
+          <h4>Elevation</h4>
+          <p>4,741 feet</p>
+        </section>
+        <section>
+          <img src="images/location.svg" alt="location pin icon">
+          <h4>Location</h4>
+          <p>Mediterranean</p>
+        </section>
+        <section>
+          <img src="images/population.svg" alt="people icon">
+          <h4>Population</h4>
+          <p>923,608</p>
+        </section>
+      </div>
     </section>
+    <!-- ▲▲ end About -->
 
     <h2 id="contact">Contact Us</h2>
     <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
       <fieldset>
         <legend>Personal Information</legend>
         <label for="first-name">First Name</label>
-        <input type="text" id="first-name" name="first-name" placeholder="Enter first name" autocomplete="given-name" required />
+        <input type="text" id="first-name" name="first-name" placeholder="Enter first name" autocomplete="given-name" required>
 
         <label for="last-name">Last Name</label>
-        <input type="text" id="last-name" name="last-name" placeholder="Enter last name" autocomplete="family-name" required />
+        <input type="text" id="last-name" name="last-name" placeholder="Enter last name" autocomplete="family-name" required>
       </fieldset>
 
       <fieldset>
@@ -175,10 +164,10 @@
         <small id="contact-help">Select how you would like us to contact you.</small>
 
         <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" placeholder="Enter Email" autocomplete="email" />
+        <input type="email" id="email" name="email" placeholder="Enter Email" autocomplete="email">
 
         <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" placeholder="Enter telephone number" autocomplete="tel" />
+        <input type="tel" id="phone" name="phone" placeholder="Enter telephone number" autocomplete="tel">
       </fieldset>
 
       <fieldset>
