--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Skip to main content</a>
+
   <header>
     <img src="images/logo-L.png" alt="Wunderlust Travel Logo" id="logo">
     <h1>Let Wunderlust Travel help you plan the trip of your dreams!</h1>
@@ -47,74 +48,89 @@
       <img src="images/majorca-cove-S.png" alt="Cove in Majorca">
     </picture>
 
-    <h2>Plan Your Trip</h2>
+    <!-- Plan Your Trip (scoped wrapper for stable styles) -->
+    <section id="plan">
+      <h2>Plan Your Trip</h2>
 
-    <article>
-      <h3>How to Get There</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/></svg>
-      <a href="#" title="Search for flights">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
+      <article>
+        <h3>How to Get There</h3>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z"/>
+        </svg>
+        <a href="#" title="Search for flights">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+        </a>
+      </article>
 
-    <article>
-      <h3>Places to Stay</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" /><circle cx="7" cy="10" r="1" /></svg>
-      <a href="#" title="Search for Hotels">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
+      <article>
+        <h3>Places to Stay</h3>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" />
+          <circle cx="7" cy="10" r="1" />
+        </svg>
+        <a href="#" title="Search for Hotels">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+        </a>
+      </article>
 
-    <article>
-      <h3>Things to Do</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-        <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
-        <path d="M4 18l-1 -3h18l-1 3" />
-        <path d="M11 12h7l-7 -9v9" />
-        <line x1="8" y1="7" x2="6" y2="12" />
-      </svg>
-      <a href="#" title="Search for Activities">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
+      <article>
+        <h3>Things to Do</h3>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
+          <path d="M4 18l-1 -3h18l-1 3" />
+          <path d="M11 12h7l-7 -9v9" />
+          <line x1="8" y1="7" x2="6" y2="12" />
+        </svg>
+        <a href="#" title="Search for Activities">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+        </a>
+      </article>
 
-    <article>
-      <h3>Where to Eat</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-        <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
-      </svg>
-      <a href="#" title="Search for Restaurants">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
-      </a>
-    </article>
+      <article>
+        <h3>Where to Eat</h3>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
+          <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
+        </svg>
+        <a href="#" title="Search for Restaurants">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24"><polyline points="9 6 15 12 9 18" /></svg>
+        </a>
+      </article>
+    </section>
 
-    <h2>Testimonials</h2>
-    <article>
-      <h3>Miranda Blake</h3>
-      <img src="images/miranda-blake-S.png" alt="Miranda Blake">
-      <p><strong>Traveling From:</strong> London, England</p>
-      <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
-    </article>
-    <article>
-      <h3>Max Winter</h3>
-      <img src="images/max-winter-S.png" alt="Max Winter">
-      <p><strong>Traveling From:</strong> Berlin, Germany</p>
-      <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer.”</blockquote>
-    </article>
-    <article>
-      <h3>Inés Villegoes</h3>
-      <img src="images/ines-villegoes-S.png" alt="Inés Villegoes">
-      <p><strong>Traveling From:</strong> Barcelona, Spain</p>
-      <blockquote>“A very safe environment for all travelers.”</blockquote>
-    </article>
-    <article>
-      <h3>Carmen Lorenzo</h3>
-      <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo">
-      <p><strong>Traveling From:</strong> Madrid, Spain</p>
-      <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
-    </article>
+    <!-- Testimonials (scoped wrapper for stable styles) -->
+    <section id="testimonials">
+      <h2>Testimonials</h2>
 
-    <!-- ▼▼ REPLACED: <dl> … </dl> with #about block -->
+      <article>
+        <h3>Miranda Blake</h3>
+        <img src="images/miranda-blake-S.png" alt="Miranda Blake">
+        <p><strong>Traveling From:</strong> London, England</p>
+        <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
+      </article>
+
+      <article>
+        <h3>Max Winter</h3>
+        <img src="images/max-winter-S.png" alt="Max Winter">
+        <p><strong>Traveling From:</strong> Berlin, Germany</p>
+        <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer.”</blockquote>
+      </article>
+
+      <article>
+        <h3>Inés Villegoes</h3>
+        <img src="images/ines-villegoes-S.png" alt="Inés Villegoes">
+        <p><strong>Traveling From:</strong> Barcelona, Spain</p>
+        <blockquote>“A very safe environment for all travelers.”</blockquote>
+      </article>
+
+      <article>
+        <h3>Carmen Lorenzo</h3>
+        <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo">
+        <p><strong>Traveling From:</strong> Madrid, Spain</p>
+        <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
+      </article>
+    </section>
+
+    <!-- About is present in markup but intentionally unstyled for now -->
     <section id="about">
       <h2>About Your Destination</h2>
       <div>
@@ -140,7 +156,6 @@
         </section>
       </div>
     </section>
-    <!-- ▲▲ end About -->
 
     <h2 id="contact">Contact Us</h2>
     <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
