--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
     </section>
 
-    <!-- About Your Destination (scoped & safe) -->
+    <!-- About Your Destination -->
     <section id="about">
       <h2>About Your Destination</h2>
       <dl class="about-dl">
@@ -146,38 +146,53 @@
       </dl>
     </section>
 
-    <h2 id="contact">Contact Us</h2>
+    <!-- Contact -->
+    <h2 id="contact">Contact Us <span class="form-required">* required</span></h2>
     <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
-      <fieldset>
-        <legend>Personal Information</legend>
-        <label for="first-name">First Name</label>
-        <input type="text" id="first-name" name="first-name" placeholder="Enter first name" autocomplete="given-name" required>
+      <fieldset class="pi">
+        <legend class="sr-only">Personal Information</legend>
 
-        <label for="last-name">Last Name</label>
-        <input type="text" id="last-name" name="last-name" placeholder="Enter last name" autocomplete="family-name" required>
+        <label for="first-name">First Name<span class="required">*</span></label>
+        <input type="text" id="first-name" name="first-name" placeholder="First Name" autocomplete="given-name" required>
+
+        <label for="last-name">Last Name<span class="required">*</span></label>
+        <input type="text" id="last-name" name="last-name" placeholder="Last Name" autocomplete="family-name" required>
       </fieldset>
 
-      <fieldset>
-        <legend>Contact Method</legend>
-        <label for="contact-method">Preferred Method</label>
-        <select id="contact-method" name="contact-method" aria-describedby="contact-help">
-          <option value="email">Email</option>
-          <option value="text">Text</option>
-          <option value="phone">Phone</option>
-        </select>
-        <small id="contact-help">Select how you would like us to contact you.</small>
+      <fieldset class="cm">
+        <legend>Contact Method<span class="required">*</span></legend>
 
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" placeholder="Enter Email" autocomplete="email">
+        <label class="radio">
+          <input type="radio" name="contactPref" id="prefEmail" value="email" required checked>
+          <span class="radio-control"></span>
+          <span class="radio-label">Email</span>
+        </label>
 
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" placeholder="Enter telephone number" autocomplete="tel">
+        <label class="radio">
+          <input type="radio" name="contactPref" id="prefText" value="text">
+          <span class="radio-control"></span>
+          <span class="radio-label">Text</span>
+        </label>
+
+        <label class="radio">
+          <input type="radio" name="contactPref" id="prefPhone" value="phone">
+          <span class="radio-control"></span>
+          <span class="radio-label">Phone</span>
+        </label>
+
+        <label for="email">Email Address<span class="required">*</span></label>
+        <input type="email" id="email" name="email" placeholder="Email Address" autocomplete="email" required>
+
+        <label for="phone">Phone Number<span class="required">*</span></label>
+        <input type="tel" id="phone" name="phone" placeholder="Phone Number" autocomplete="tel" required>
       </fieldset>
 
-      <fieldset>
-        <legend>Travel Preferences</legend>
-        <label for="destination">Destination</label>
-        <select id="destination" name="destination">
+      <fieldset class="tp">
+        <legend class="sr-only">Travel Preferences</legend>
+
+        <label for="destination">Destination<span class="required">*</span></label>
+        <select id="destination" name="destination" required>
+          <option value="" disabled selected>Choose an Option</option>
           <option value="barcelona">Barcelona</option>
           <option value="granada">Granada</option>
           <option value="ibiza">Ibiza</option>
@@ -188,8 +203,9 @@
           <option value="valencia">Valencia</option>
         </select>
 
-        <label for="season">Travel Time</label>
-        <select id="season" name="season">
+        <label for="season">Travel Time<span class="required">*</span></label>
+        <select id="season" name="season" required>
+          <option value="" disabled selected>Choose an Option</option>
           <option value="fall">Fall</option>
           <option value="winter">Winter</option>
           <option value="spring">Spring</option>
@@ -198,7 +214,7 @@
         </select>
       </fieldset>
 
-      <button type="submit">Submit</button>
+      <button type="submit" class="btn-submit">Submit</button>
     </form>
   </main>
 
