--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <h2>Majorca</h2>
     <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
 
-    <!-- intro gallery wrapper added for tablet grid -->
     <div class="intro-gallery">
       <picture>
         <source srcset="images/majorca-waves-L.png" media="(min-width: 1024px)">
@@ -119,13 +118,16 @@
       </div>
     </section>
 
-    <h2>About Your Destination</h2>
-    <dl>
-      <dt>Size</dt><dd>1,405 miles squared</dd>
-      <dt>Elevation</dt><dd>4,741 feet</dd>
-      <dt>Location</dt><dd>Mediterranean</dd>
-      <dt>Population</dt><dd>923,608</dd>
-    </dl>
+    <!-- ABOUT band (wrapped) -->
+    <section id="about">
+      <h2>About Your Destination</h2>
+      <dl class="facts">
+        <dt>Size</dt>       <dd>1,405 mi sq</dd>
+        <dt>Elevation</dt>  <dd>4,741 feet</dd>
+        <dt>Location</dt>   <dd>Mediterranean</dd>
+        <dt>Population</dt> <dd>923,608</dd>
+      </dl>
+    </section>
 
     <h2 id="contact">Contact Us</h2>
     <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
